Fix title shifting due to LaTeX content

--- a/static/base.css
+++ b/static/base.css
@@ -50,3 +50,7 @@ pre {
     display: grid;
     grid-template-columns: repeat(4, 150px);
 }
+
+h2 {
+    line-height: 1.7em;
+}
